--- a/src/index.html
+++ b/src/index.html
@@ -11,22 +11,29 @@
   <meta charset="utf-8">
   <base href="./">
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
-  <meta content="CoreUI Free Angular Admin Template" name="description" />
-  <meta content="Łukasz Holeczek" name="author" />
+  <!-- <meta content="CoreUI Free Angular Admin Template" name="description" /> -->
+  <!-- <meta content="Łukasz Holeczek" name="author" /> -->
   <meta
     content="CoreUI,Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript"
     name="keyword"
   />
   <link href="assets/favicon.ico" rel="icon" type="image/x-icon">
-  <title>CoreUI Free Angular Admin Template</title>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
+  <!-- <title>CoreUI Free Angular Admin Template</title> -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
 <noscript>You need to enable JavaScript to run this app.</noscript>
+
 <app-root>
   <div class="fade show" style="text-align: center; padding-top: calc(100vh / 2); height: 100vh">
     <i class="spinner-grow spinner-grow-sm"></i>
     <span class="m-1">Loading...</span>
   </div>
 </app-root>
+
 </body>
 </html>
