--- a/src/index.html
+++ b/src/index.html
@@ -7,33 +7,74 @@
 * License: MIT
 -->
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <base href="./">
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
-  <!-- <meta content="CoreUI Free Angular Admin Template" name="description" /> -->
-  <!-- <meta content="Łukasz Holeczek" name="author" /> -->
-  <meta
-    content="CoreUI,Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript"
-    name="keyword"
-  />
-  <link href="assets/favicon.ico" rel="icon" type="image/x-icon">
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <meta content="CoreUI,Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript" name="keyword" />
+  <!-- Load Bootstrap-select CSS -->
+<!-- <link defer rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css"> -->
+
+<!-- Load jQuery first -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha512-jGsMH83oKe9asCpkOVkBnUrDDTp8wl+adkB2D+//JtlxO4SrLoJdhbOysIFQJloQFD+C4Fl1rMsQZF76JjV0eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+
+<!-- Load Bootstrap-select JS -->
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script> -->
+
+<!-- (Optional) Latest compiled and minified JavaScript translation files -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-*.min.js"></script> -->
+
+<!-- Load other dependencies -->
+<link href="assets/favicon.ico" rel="icon" type="image/x-icon">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<!-- Load Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
-  <!-- <title>CoreUI Free Angular Admin Template</title> -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="mat-typography">
-<noscript>You need to enable JavaScript to run this app.</noscript>
 
-<app-root>
-  <div class="fade show" style="text-align: center; padding-top: calc(100vh / 2); height: 100vh">
-    <i class="spinner-grow spinner-grow-sm"></i>
-    <span class="m-1">Loading...</span>
-  </div>
-</app-root>
+
+<body class="mat-typography">
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+
+  <app-root>
+    <div class="fade show" style="text-align: center; padding-top: calc(100vh / 2); height: 100vh">
+      <i class="spinner-grow spinner-grow-sm"></i>
+      <span class="loader"></span>
+      <span class="m-1">Loading...</span>
+    </div>
+  </app-root>
 
 </body>
+  <style>
+    .loader {
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background: #FF3D00;
+    position: relative;
+  }
+  .loader:before,
+  .loader:after {
+    content: "";
+    position: absolute;
+    border-radius: 50%;
+    inset: 0;
+    background: #fff;
+    transform: rotate(0deg) translate(30px);
+    animation: rotate 1s ease infinite;
+  }
+  .loader:after {
+    animation-delay: 0.5s
+  }
+  @keyframes rotate {
+    100% {transform: rotate(360deg) translate(30px)
+  }
+  }
+  </style>
+
+
 </html>
