--- a/src/index.html
+++ b/src/index.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
-<!--
-* CoreUI - Angular 17.3 Free Admin Template
-* @version v5.0.0
-* @link https://coreui.io/angular/
-* Copyright (c) 2017-2024 creativeLabs Łukasz Holeczek
-* License: MIT
--->
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <base href="./">
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
-  <meta content="CoreUI,Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript" name="keyword" />
+  <title>ss</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anuphan:wght@100..700&display=swap" rel="stylesheet">
+  <!-- <link rel="icon" type="image/x-icon" href="https://party.ect.go.th/themes/ect-pr/assets/images/logo_ect_big.png"  /> -->
+
+
+  <!-- <meta content="CoreUI,Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript" name="keyword" /> -->
+
   <!-- Load Bootstrap-select CSS -->
-<!-- <link defer rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css"> -->
+  <!-- <link defer rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css"> -->
 
-<!-- Load jQuery first -->
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha512-jGsMH83oKe9asCpkOVkBnUrDDTp8wl+adkB2D+//JtlxO4SrLoJdhbOysIFQJloQFD+C4Fl1rMsQZF76JjV0eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+  <!-- Load jQuery first -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha512-jGsMH83oKe9asCpkOVkBnUrDDTp8wl+adkB2D+//JtlxO4SrLoJdhbOysIFQJloQFD+C4Fl1rMsQZF76JjV0eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
 
-<!-- Load Bootstrap-select JS -->
-<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script> -->
+  <!-- Load Bootstrap-select JS -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script> -->
 
-<!-- (Optional) Latest compiled and minified JavaScript translation files -->
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-*.min.js"></script> -->
+  <!-- (Optional) Latest compiled and minified JavaScript translation files -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-*.min.js"></script> -->
 
-<!-- Load other dependencies -->
-<link href="assets/favicon.ico" rel="icon" type="image/x-icon">
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <!-- Load other dependencies -->
+  <link href="https://party.ect.go.th/themes/ect-pr/assets/images/logo_ect_big.png" rel="icon" type="image/x-icon">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-<!-- Load Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Load Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
 </head>
 
 
 <body class="mat-typography">
+
   <noscript>You need to enable JavaScript to run this app.</noscript>
 
   <app-root>
@@ -49,14 +52,15 @@
   </app-root>
 
 </body>
-  <style>
-    .loader {
+<style>
+  .loader {
     width: 16px;
     height: 16px;
     border-radius: 50%;
     background: #FF3D00;
     position: relative;
   }
+
   .loader:before,
   .loader:after {
     content: "";
@@ -67,14 +71,17 @@
     transform: rotate(0deg) translate(30px);
     animation: rotate 1s ease infinite;
   }
+
   .loader:after {
     animation-delay: 0.5s
   }
+
   @keyframes rotate {
-    100% {transform: rotate(360deg) translate(30px)
+    100% {
+      transform: rotate(360deg) translate(30px)
+    }
   }
-  }
-  </style>
+</style>
 
 
 </html>
