--- a/src/index.html
+++ b/src/index.html
@@ -1,89 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <base href="./" />
+    <meta
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      name="viewport"
+    />
+    <title>ss</title>
 
-<head>
-  <meta charset="utf-8">
-  <base href="./">
-  <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
-  <title>ss</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anuphan:wght@100..700&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Anuphan:wght@100..700&display=swap" rel="stylesheet">
-  <!-- <link rel="icon" type="image/x-icon" href="https://party.ect.go.th/themes/ect-pr/assets/images/logo_ect_big.png"  /> -->
+    <!-- Load other dependencies -->
+    <link
+      href="https://party.ect.go.th/themes/ect-pr/assets/images/logo_ect_big.png"
+      rel="icon"
+      type="image/x-icon"
+    />
 
+    <!-- <link rel="stylesheet" href="./scss/styles.scss"> -->
 
-  <!-- <meta content="CoreUI,Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript" name="keyword" /> -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-  <!-- Load Bootstrap-select CSS -->
-  <!-- <link defer rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css"> -->
+    <!-- Load Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Load jQuery first -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha512-jGsMH83oKe9asCpkOVkBnUrDDTp8wl+adkB2D+//JtlxO4SrLoJdhbOysIFQJloQFD+C4Fl1rMsQZF76JjV0eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
 
-  <!-- Load Bootstrap-select JS -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script> -->
-
-  <!-- (Optional) Latest compiled and minified JavaScript translation files -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-*.min.js"></script> -->
-
-  <!-- Load other dependencies -->
-  <link href="https://party.ect.go.th/themes/ect-pr/assets/images/logo_ect_big.png" rel="icon" type="image/x-icon">
-  
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-  <!-- Load Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-  
-
-</head>
+    <!-- Preload CSS -->
+    <!-- <link rel="preload" href="./scss/" as="style"> -->
+    <!-- Link to the minified CSS -->
+    <!-- <link rel="stylesheet" href="./scss/styles.scss" media="print" onload="this.media='all'"> -->
+  </head>
 
 
-<body class="mat-typography">
 
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body class="mat-typography">
+    <noscript>You need to enable JavaScript to run this app.</noscript>
 
-  <app-root>
-    <div class="fade show" style="text-align: center; padding-top: calc(100vh / 2); height: 100vh">
-      <i class="spinner-grow spinner-grow-sm"></i>
-      <span class="loader"></span>
-      <span class="m-1">Loading...</span>
-    </div>
-  </app-root>
-
-</body>
-<style>
-  .loader {
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    background: #FF3D00;
-    position: relative;
-  }
-
-  .loader:before,
-  .loader:after {
-    content: "";
-    position: absolute;
-    border-radius: 50%;
-    inset: 0;
-    background: #fff;
-    transform: rotate(0deg) translate(30px);
-    animation: rotate 1s ease infinite;
-  }
-
-  .loader:after {
-    animation-delay: 0.5s
-  }
-
-  @keyframes rotate {
-    100% {
-      transform: rotate(360deg) translate(30px)
+    <app-root>
+      <div
+        class="fade show"
+        style="text-align: center; padding-top: calc(100vh / 2); height: 100vh"
+      >
+        <i class="spinner-grow spinner-grow-sm"></i>
+        <img src="./assets/mc.gif" alt="ss" width="120px" height="120px" />
+        <!-- <span class="m-1">Loading...</span> -->
+      </div>
+    </app-root>
+  </body>
+  <style>
+    .loader {
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      background: #ff3d00;
+      position: relative;
     }
-  }
-</style>
 
+    .loader:before,
+    .loader:after {
+      content: "";
+      position: absolute;
+      border-radius: 50%;
+      inset: 0;
+      background: #fff;
+      transform: rotate(0deg) translate(30px);
+      animation: rotate 1s ease infinite;
+    }
 
+    .loader:after {
+      animation-delay: 0.5s;
+    }
+
+    @keyframes rotate {
+      100% {
+        transform: rotate(360deg) translate(30px);
+      }
+    }
+  </style>
 </html>
